<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".ui.login.LoginActivity">

    <TextView
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12"/>

    <EditText
        android:id="@+id/username"
        android:hint="@string/login_login"
        android:textColor="@color/white"
        android:textColorHint="@color/darker_white"
        android:selectAllOnFocus="true"
        android:inputType="textEmailAddress"
        android:theme="@style/LoginEditText"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.15" />

    <EditText
        android:id="@+id/password"
        android:hint="@string/login_password"
        android:textColor="@color/white"
        android:selectAllOnFocus="true"
        android:textColorHint="@color/darker_white"
        android:inputType="textPassword"
        android:imeActionLabel="@string/action_sign_in_short"
...
        android:layout_marginRight="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <Button
        android:id="@+id/login"
        android:text="@string/login_sign_in"
        android:textSize="@dimen/text_size"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:enabled="false"
        android:background="@drawable/button"
...
