<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registration_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:id="@+id/textView2"
        android:text="@string/registration"
        android:textSize="@dimen/title_text_size"
        android:textColor="@color/darker_white"
        android:gravity="center"
        android:background="@drawable/text_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12"/>

    <EditText
        android:id="@+id/registration_username"
        android:hint="@string/login_login"
        android:textColor="@color/white"
        android:textColorHint="@color/darker_white"
        android:selectAllOnFocus="true"
        android:inputType="textEmailAddress"
        android:theme="@style/LoginEditText"
        android:paddingVertical="@dimen/edittext_padding_vert"
        android:paddingStart="12dp"
        android:paddingLeft="12dp"
        android:paddingEnd="22dp"
        android:paddingRight="22dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.1" />

    <EditText
        android:id="@+id/registration_password"
        android:hint="@string/login_password"
        android:textColor="@color/white"
        android:textColorHint="@color/darker_white"
        android:selectAllOnFocus="true"
        android:inputType="textPassword"
        android:theme="@style/LoginEditText"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:paddingStart="12dp"
        android:paddingLeft="12dp"
        android:paddingEnd="22dp"
        android:paddingRight="22dp"
        android:paddingVertical="@dimen/edittext_padding_vert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registration_username" />

    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
        android:id="@+id/registration_question_spinner"
        android:hint="Выберите секретный вопрос"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:spinnerMode="dropdown"
        app:met_baseColor="@color/white"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelTextColor="@color/white"
        app:met_primaryColor="@color/white"
        app:met_textColor="@color/white"
        app:met_underlineColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registration_password"/>

    <EditText
        android:id="@+id/registration_answer"
        android:hint="@string/registration_answer"
        android:textColor="@color/white"
        android:textColorHint="@color/darker_white"
        android:selectAllOnFocus="true"
        android:inputType="text"
        android:theme="@style/LoginEditText"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:paddingVertical="@dimen/edittext_padding_vert"
        android:paddingStart="12dp"
        android:paddingLeft="12dp"
        android:paddingEnd="12dp"
        android:paddingRight="22dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registration_question_spinner" />

    <Button
        android:id="@+id/registration_registration"
        android:text="@string/registration"
        android:textSize="@dimen/text_size"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:enabled="false"
        android:background="@drawable/button"
        android:layout_width="@dimen/small_button_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registration_answer"
        app:layout_constraintVertical_bias="0.32" />

    <ProgressBar
        android:id="@+id/registration_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:indeterminateTint="@color/menu_yellow"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registration_registration"
        app:layout_constraintVertical_bias="0.35" />

</androidx.constraintlayout.widget.ConstraintLayout>