...

    <!--Login Activity-->
    <string name="title_activity_login">Bridge</string>
    <string name="login_title">Вход в аккаунт</string>
    <string name="login_login">Логин</string>
    <string name="login_password">Пароль</string>
    <string name="registration">Регистрация</string>
    <string name="login_sign_in">Войти</string>
    <string name="registration_answer">Ответ на вопрос</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_answer">Ответ не может быть пустым</string>
    <string name="login_failed">"Login failed"</string>
...
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>

    <!--Main Menu Activity-->
    <string name="title_activity_menu">MenuActivity</string>

    <string name="game_title">Робберный бридж</string>
    <string name="create_team">Создать команду</string>
    <string name="join_team">Присоединиться</string>
    <string name="log_out">Выйти из аккаунта</string>
    <string name="previous_games">История сеансов</string>

    <string name="game_title_en">Rubber Bridge</string>
...
